# aetherium-old

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
.github/workflows/: clang-macos.yml  clang-windows.yml  clang.yml  cpp.yml  gcc.yml  msvc.yml  test.yml
cmake/: cmx-bootstrap.cmake
core/: CMakeLists.txt
core/include/aetherium/core/: resource.hpp  screens.hpp  utils.hpp  window.hpp
core/src/: resource.cpp  screens.cpp  window.cpp
examples/simple-window-example/: CMakeLists.txt  main.cpp
examples/simple-window-example/src/: main.cpp
examples/simple_window_example/: main.cpp
include/aetherium/: aetherium.hpp  imgui.hpp  resource.hpp  screens.hpp  utils.hpp  window.hpp
include/aetherium/renderer/: renderer.hpp  shader.hpp  utils.hpp  vulkan_context.hpp  vulkan_descriptors.hpp  vulkan_device.hpp  vulkan_fence.hpp  vulkan_swapchain.hpp
include/aetherium/renderer/vulkan/: context.hpp  device.hpp  fence.hpp  swapchain.hpp
renderer/: CMakeLists.txt
renderer/include/aetherium/renderer/: renderer.hpp  shader.hpp  utils.hpp  vulkan_context.hpp  vulkan_device.hpp  vulkan_swapchain.hpp
renderer/src/: renderer.cpp  shader.cpp  vulkan_context.cpp  vulkan_device.cpp  vulkan_swapchain.cpp
src/: aetherium.cpp  imgi.cpp  resource.cpp  screens.cpp  window.cpp
src/renderer/: renderer.cpp  shader.cpp  vulkan_context.cpp  vulkan_descriptors.cpp  vulkan_device.cpp  vulkan_fence.cpp  vulkan_swapchain.cpp
src/renderer/vulkan/: context.cpp  device.cpp  fence.cpp  swapchain.cpp
test/: my_test.cpp
tests/: test_resource_manager.cpp
